--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   display: flex;
   border: 1px solid #ff834f;
   border-radius: 5px;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 .TezIDProofImage {
   width: 20px;
