--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,15 @@
 }
 .TezIDProofItem {
   display: flex;
-  cursor: pointer;
-  padding: 5px;
-  display: flex;
   border: 1px solid #ff834f;
   border-radius: 5px;
+  height: 20px;
+  padding: 5px;
   margin-right: 5px;
+  cursor: pointer;
 }
 .TezIDProofImage {
   width: 20px;
+  height: 20px;
   margin-right: 5px;
 }
