A few more css fixes

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 }
 .TezIDProofItem {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   border: 1px solid #ff834f;
   border-radius: 5px;
   height: 20px;
